puhser works, getting ready to vue

--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
 
     var channel = pusher.subscribe('my-channel');
     channel.bind('my-event', function(data) {
-      alert(JSON.stringify(data));
+      alert(JSON.stringify(data.message.message2));
     });
   </script>
 </head>
